--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -100,6 +100,7 @@ jobs:
 
       - name: Upload coverage reports
         uses: codecov/codecov-action@v3
+        if: always()
         with:
           files: ./backend/coverage/lcov.info
           flags: backend
@@ -130,6 +131,40 @@ jobs:
         run: npm test -- --run --coverage
 
       - name: Upload coverage reports
+        uses: codecov/codecov-action@v3
+        if: always()
+        with:
+          files: ./frontend/coverage/lcov.info
+          flags: frontend
+          name: frontend-coverage
+
+  security-scanning:
+    name: Run Security Scans
+    runs-on: ubuntu-latest
+    continue-on-error: true  # Don't block pipeline on security scan failures
+    
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
+        continue-on-error: true
+        with:
+          scan-type: 'fs'
+          scan-ref: '.'
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '0'
+
+      - name: Upload Trivy results
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: 'trivy-results.sarif'
+
+      - name: Dependency Check (Backend)
+        working-directory: ./backend
         run: |
           npm audit --audit-level=moderate || echo "Vulnerabilities found - review required"
 
