--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -57,101 +57,8 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ansible
 
-      - name: Install Ansible Azure Collection
-        run: ansible-galaxy collection install azure.azcollection
-
-      - name: Install Azure CLI
-        run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-
-      - name: Install Python Dependencies
-        run: pip install -r ~/.ansible/collections/ansible_collections/azure/azcollection/requirements-azure.txt
-
-      - name: Run Ansible Playbook
+      - name: Run Ansible Deployment
         env:
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          AZURE_TENANT: ${{ secrets.AZURE_TENANT_ID }}
-          ACR_NAME: ${{ secrets.ACR_NAME }}
-          ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
-          ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
-name: CD Pipeline
-
-on:
-  push:
-    branches: [ main ]
-    paths-ignore:
-      - 'terraform/**'
-      - 'README.md'
-      - 'docs/**'
-  workflow_dispatch:
-
-env:
-  ACR_NAME: devopspipelinedevacr
-  IMAGE_TAG: ${{ github.sha }}
-
-jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Log in to Azure Container Registry
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ secrets.ACR_LOGIN_SERVER }}
-          username: ${{ secrets.ACR_USERNAME }}
-          password: ${{ secrets.ACR_PASSWORD }}
-
-      - name: Build and Push Backend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./backend
-          push: true
-          tags: |
-            ${{ secrets.ACR_LOGIN_SERVER }}/devops-backend:${{ env.IMAGE_TAG }}
-            ${{ secrets.ACR_LOGIN_SERVER }}/devops-backend:latest
-
-      - name: Build and Push Frontend
-        uses: docker/build-push-action@v5
-        with:
-          context: ./frontend
-          push: true
-          tags: |
-            ${{ secrets.ACR_LOGIN_SERVER }}/devops-frontend:${{ env.IMAGE_TAG }}
-            ${{ secrets.ACR_LOGIN_SERVER }}/devops-frontend:latest
-
-  deploy:
-    needs: build-and-push
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Install Ansible
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ansible
-
-      - name: Install Ansible Azure Collection
-        run: ansible-galaxy collection install azure.azcollection
-
-      - name: Install Azure CLI
-        run: |
-          curl -sL https://aka.ms/InstallAzureCLIDeb | sudo bash
-
-      - name: Install Python Dependencies
-        run: pip install -r ~/.ansible/collections/ansible_collections/azure/azcollection/requirements-azure.txt
-
-      - name: Run Ansible Playbook
-        env:
-          AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-          AZURE_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-          AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          AZURE_TENANT: ${{ secrets.AZURE_TENANT_ID }}
-          ACR_NAME: ${{ secrets.ACR_NAME }}
           ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
           ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
           ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
@@ -165,7 +72,7 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > ssh_key.pem
           chmod 600 ssh_key.pem
           
-          # Run Playbook with static inventory
+          # Run deployment playbook with static inventory
           ansible-playbook -i ansible/inventory/static-hosts.ini \
             ansible/playbooks/deploy-app.yml \
             --private-key ssh_key.pem \
