Update ACR name to taskmanagementacr2025 for deployment

--- a/.github/workflows/cd-pipeline.yml
+++ b/.github/workflows/cd-pipeline.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  ACR_NAME: devopspipelinedevacr
+  ACR_NAME: taskmanagementacr2025
   IMAGE_TAG: ${{ github.sha }}
 
 jobs:
