--- a/ansible/playbooks/deploy-app.yml
+++ b/ansible/playbooks/deploy-app.yml
@@ -36,6 +36,9 @@
         groups: docker
         append: yes
 
+    - name: Reset connection to apply group changes
+      meta: reset_connection
+
     - name: Create application directory
       file:
         path: "{{ app_dir }}"
