Fix deployment: Remove strict Postgres healthcheck dependency to prevent backend startup failure

--- a/ansible/playbooks/deploy-app.yml
+++ b/ansible/playbooks/deploy-app.yml
@@ -88,8 +88,7 @@
               ports:
                 - "3000:3000"
               depends_on:
-                postgres:
-                  condition: service_healthy
+                - postgres
             
             frontend:
               image: {{ acr_login_server }}/devops-frontend:{{ image_tag }}
